--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "pg": "^8.7.3"
+    "method-override": "^3.0.0",
+    "nunjucks": "^3.2.3",
+    "pg": "^8.7.3",
+    "pug": "^3.0.2"
   }
 }
