added authentication required for further pages
You can test this by resetting your cookies/cache in your browser and then reopening the webpage and go to any of the further pages, like /dashboard, it will reroute the page to the main screen.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dependencies": "^0.0.1",
     "express": "^4.17.3",
     "method-override": "^3.0.0",
     "nunjucks": "^3.2.3",
